--- a/src/App.scss
+++ b/src/App.scss
@@ -13,4 +13,9 @@ $fill-white: #fff;
 body {
     background-color: $fill-white;
     color: $fill-grey-font;
+    font-size: 14px;
+}
+
+.header {
+    text-align: center;
 }
