--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,11 @@ $fill-white: #fff;
     padding: 0;
 }
 
+button:focus {
+    outline: none !important;
+    outline-offset: none !important;
+}
+
 .font-blue {
     color: $fill-blue-font;
 }
@@ -39,8 +44,8 @@ body {
 }
 
 .navMain {
-    background-color: $fill-blue-font;
-    padding: 20px 40px;
+    border: 1px solid $fill-blue-font;
+    padding: 20px 36px;
     text-align: center;
 
     button {
@@ -54,16 +59,17 @@ body {
             height: 40px;
             border-radius: 50%;
             padding: 20px;
-            box-shadow: 4px 4px 4px $fill-black;
+            box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
+            margin-bottom: 10px;
             
             img {
                 width: 40px;
                 height: 40px;
             }
+        }
 
-            p {
-                
-            }
+        p {
+            color: $fill-blue-font;
         }
     }
 }
