--- a/src/App.scss
+++ b/src/App.scss
@@ -14,9 +14,26 @@ $fill-white: #fff;
     padding: 0;
 }
 
-button:focus {
-    outline: none !important;
-    outline-offset: none !important;
+button {
+    border: none;
+    margin: 0 20px;
+    background-color: transparent;
+
+    &:focus {
+        outline: none !important;
+        outline-offset: none !important;
+    }
+}
+
+.btn-square {
+    
+    .btn-image {
+        border-radius: 20px;
+        background-color: $fill-white;
+        box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
+        width: 80px;
+        height: 80px;
+    }
 }
 
 .font-blue {
@@ -34,7 +51,7 @@ button:focus {
 body {
     background-color: $fill-white;
     color: $fill-grey-font;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .header {
@@ -43,17 +60,14 @@ body {
     width: 100vw;
 }
 
-.navMain {
+.nav-main {
     border: 1px solid $fill-blue-font;
     padding: 20px 36px;
     text-align: center;
 
     button {
-        border: none;
-        margin: 0 20px;
-        background-color: transparent;
 
-        .boxImage {
+        .btn-image {
             background-color: $fill-white;
             width: 40px;
             height: 40px;
@@ -70,6 +84,49 @@ body {
 
         p {
             color: $fill-blue-font;
+        }
+    }
+}
+
+.container-top {
+    padding: 30px 20px;
+    text-align: center;
+    background: rgb(0,125,254);
+    background: -moz-linear-gradient(180deg, rgba(0,125,254,1) 0%, rgba(0,163,254,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(0,125,254,1) 0%, rgba(0,163,254,1) 100%);
+    background: linear-gradient(180deg, rgba(0,125,254,1) 0%, rgba(0,163,254,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#007dfe",endColorstr="#00a3fe",GradientType=1);
+
+    h3 {
+        color: $fill-white;
+        margin-bottom: 30px;
+    }
+}
+
+.main-point-box {
+    background-color: $fill-white;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    display: flex;
+
+    > div {
+        width: 49.5%;
+        padding: 14px;
+        flex: 2 1;
+
+        &._left {
+            border-right: 1px solid $fill-blue;
+        }
+
+        img {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
+
+        .main-point-text {
+            display: inline-block;
         }
     }
 }
