--- a/src/App.scss
+++ b/src/App.scss
@@ -30,9 +30,19 @@ button {
     .btn-image {
         border-radius: 20px;
         background-color: $fill-white;
-        box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
-        width: 80px;
-        height: 80px;
+        box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
+        width: 40px;
+        height: 40px;
+        padding: 20px;
+
+        img {
+            width: 40px;
+            height: 40px;
+        }
+    }
+
+    p {
+        margin-top: 10px;
     }
 }
 
@@ -44,9 +54,14 @@ button {
     color: $fill-black;
 }
 
+.font-grey {
+    color: $fill-grey-font;
+}
+
 .font-bold {
     font-weight: bold;
 }
+
 
 body {
     background-color: $fill-white;
@@ -73,7 +88,7 @@ body {
             height: 40px;
             border-radius: 50%;
             padding: 20px;
-            box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
+            box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
             margin-bottom: 10px;
             
             img {
@@ -108,10 +123,11 @@ body {
     border-radius: 20px;
     margin-bottom: 30px;
     display: flex;
+    box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
 
     > div {
         width: 49.5%;
-        padding: 14px;
+        padding: 14px 0;
         flex: 2 1;
 
         &._left {
@@ -123,10 +139,23 @@ body {
             width: 20px;
             height: 20px;
             margin-right: 10px;
+            vertical-align: top;
+            margin-top: 5px;
         }
 
         .main-point-text {
             display: inline-block;
+            text-align: left;
+
+            p {
+                font-size: 12px;
+            }
         }
     }
+}
+
+.main-point-action {
+    margin-top: -30px;
+    padding-bottom: 30px;
+    text-align: center;
 }
