--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,8 @@ $gradient-grey-bottom: #797A7C;
 $fill-black: #000;
 $fill-white: #fff;
 
+$shadow: 3px 3px 10px rgba(0,0,0,0.1);
+
 * {
     box-sizing: content-box;
     margin: 0;
@@ -31,7 +33,7 @@ button {
     .btn-image {
         border-radius: 15px;
         background-color: $fill-white;
-        box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
+        box-shadow: $shadow;
         width: 40px;
         height: 40px;
         padding: 20px;
@@ -104,7 +106,7 @@ body {
             height: 40px;
             border-radius: 50%;
             padding: 20px;
-            box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
+            box-shadow: $shadow;
             margin-bottom: 10px;
             
             img {
@@ -142,7 +144,7 @@ body {
     border-radius: 20px;
     margin-bottom: 30px;
     display: flex;
-    box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
+    box-shadow: $shadow;
 
     > div {
         width: 49.5%;
@@ -179,6 +181,13 @@ body {
     text-align: center;
 }
 
+.main-attention {
+    margin: 0 20px;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: $shadow;
+}
+
 .main-transaction {
     padding: 20px;
 
@@ -193,7 +202,7 @@ body {
         padding: 15px;
         margin-bottom: 15px;
         border-radius: 15px;
-        box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
+        box-shadow: $shadow;
 
         img {
             width: 30px;
